--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -13,7 +13,6 @@
   }
   
   
-
 /* Base styles and resets */
 .printing-dashboard {
   font-family: 'Poppins', 'Segoe UI', sans-serif;
@@ -91,7 +90,7 @@ button {
   color: var(--primary);
   border-radius: 20px;
   padding: 2px 10px;
-  font-size: 0.8rem;
+  font-size: 1rem;
   margin-left: 10px;
   font-weight: 500;
 }
@@ -116,7 +115,7 @@ button {
 .avatar {
   width: 60px;
   height: 60px;
-  background-color: var(--light-accent); /* léger bleu clair */
+  background-color: #3b82f6; /* léger bleu clair */
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -128,7 +127,7 @@ button {
 .client-info h1 {
   margin-bottom: 5px;
   font-size: 1.5rem;
-  color: var(--text-primary);
+  color: #3b82f6;
 }
 
 .client-meta {
@@ -136,7 +135,7 @@ button {
   align-items: center;
   gap: 15px;
   font-size: 0.9rem;
-  color: var(--text-primary);
+  color: #ffffff;
 }
 
 .account-type {
